WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
235172
REGRESSION (
r278561
): Right clicking a link selects the full line with unrelated text
https://bugs.webkit.org/show_bug.cgi?id=235172
Summary
REGRESSION (r278561): Right clicking a link selects the full line with unrela...
alan
Reported
2022-01-12 20:16:23 PST
Created
attachment 449023
[details]
Test case <
rdar://84069534
>
Attachments
Test case
(290 bytes, text/html)
2022-01-12 20:16 PST
,
alan
no flags
Details
Patch
(4.17 KB, patch)
2022-01-12 20:20 PST
,
alan
no flags
Details
Formatted Diff
Diff
Patch
(5.81 KB, patch)
2022-01-13 08:39 PST
,
alan
no flags
Details
Formatted Diff
Diff
Patch
(5.87 KB, patch)
2022-01-13 08:43 PST
,
alan
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2022-01-12 20:20:08 PST
Created
attachment 449024
[details]
Patch
alan
Comment 2
2022-01-13 08:39:10 PST
Created
attachment 449065
[details]
Patch
alan
Comment 3
2022-01-13 08:43:25 PST
Created
attachment 449066
[details]
Patch
EWS
Comment 4
2022-01-13 10:22:46 PST
Committed
r287981
(
246010@main
): <
https://commits.webkit.org/246010@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 449066
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug